(env
   (dev (flags (:standard -warn-error -a+31))))

(ocamllex lexer)
(menhir (modules parser))

(executable
   (name main)
   (libraries base core ANSITerminal ctypes ctypes.foreign ctypes.stubs)
   (link_flags (-cclib -L%{project_root}/.. -cclib -lseq -cclib -Wl,-install_name,libparser.dylib))
   (modes shared_object exe)
)