(env
   (dev (flags (:standard
      -w @a-4-29-40-41-42-44-45-48-58-59-60-40-26-27
      -warn-error -A))
   )
   (macos-dev (flags (:standard
      -w @a-4-29-40-41-42-44-45-48-58-59-60-40-26-27
      -strict-sequence
      -strict-formats
      -short-paths
      -keep-locs
      -warn-error -A
      -cclib -Wl,-install_name,@rpath/libseqparser.so))
   )
)

(ocamllex lexer)
(menhir (modules parser))

(executable
   (name main)
   (libraries base core ANSITerminal ctypes ctypes.foreign ctypes.stubs sexplib)
   (link_flags (-cclib -L%{project_root}/.. -cclib -lseq))
   (modes shared_object exe)
   (preprocess (pps ppx_sexp_conv))
)
