(env (dev (flags (:standard -w @a-4-29-40-41-42-44-45-48-58-59-60-40-26-27 -warn-error -A))))

(ocamllex lexer)
(menhir (flags --table) (modules grammar))
(rule
  (targets grammar_messages.ml)
  (deps grammar.messages grammar.mly)
  (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(executable
  (name main)
  (libraries menhirLib)
  (link_flags (:standard -runtime-variant _pic))
  (modes (native object)))